--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,16 +1,32 @@
+set -g default-terminal "screen-256color"
 unbind C-b
 set -g prefix C-a
 bind-key a send-prefix
-setw -g mode-keys vi
+
+# Mouse support
 set -g mode-mouse on
 set -g mouse-resize-pane on
 set -g mouse-select-window on
 set -g mouse-select-pane on
 
+# Enable activity alters
+setw -g monitor-activity on
+
+set -g escape-time 10
 set -g bell-action any
 set -g base-index 1
 setw -g aggressive-resize on
-set -g history-limit 100000
+set -g history-limit 1000000
 bind-key r source-file ~/.tmux.conf
 bind-key | split-window -h
 bind-key - split-window -v
+setw -g c0-change-trigger 10
+setw -g c0-change-interval 250
+
+# Vi emulation
+setw -g mode-keys vi
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+
+# keep window numbers gapless
+set -g renumber-windows
