.ssh/config changes

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,12 +1,15 @@
+Host *
+    ServerAliveInterval 60
+    ForwardX11 yes
+    ForwardAgent yes
+
+
 Host ci-slave-u12-am01
     HostName ci-slave-u12-am01
 
 Host ci-slave-autobot-u12-ed00
     HostName ci-slave-autobot-u12-ed00
 
-Host whistle-gw
-    User whistle
-    ProxyCommand ssh zsandboxed -W 104.46.108.148:%p
 
 Host dolphin-ci
     User dolphin
