--- a/.gitmodules
+++ b/.gitmodules
@@ -1,84 +1,105 @@
 [submodule "deoplete-go"]
     path = .config/nvim/bundle/deoplete-go
     url = https://github.com/zchee/deoplete-go
+    ignore = untracked
 
 [submodule "deoplete.nvim"]
     path = .config/nvim/bundle/deoplete.nvim
     url = https://github.com/Shougo/deoplete.nvim
+    ignore = untracked
 
 [submodule "InstantRst"]
     path = .config/nvim/bundle/InstantRst
     url = https://github.com/Rykka/InstantRst
+    ignore = untracked
 
 
 [submodule "jedi-vim"]
     path = .config/nvim/bundle/jedi-vim
     url = https://github.com/davidhalter/jedi-vim.git
+    ignore = untracked
 
 [submodule "mustache"]
     path = .config/nvim/bundle/mustache
     url = git://github.com/mustache/vim-mustache-handlebars.git
+    ignore = untracked
 
 [submodule "neomake"]
     path = .config/nvim/bundle/neomake
     url = https://github.com/benekastah/neomake
+    ignore = untracked
 
 [submodule "probe"]
     path = .config/nvim/bundle/probe
     url = https://github.com/torbiak/probe.git
+    ignore = untracked
 
 [submodule "rut.vim"]
     path = .config/nvim/bundle/rut.vim
     url = https://github.com/torbiak/rut.vim
+    ignore = untracked
 
 [submodule "tagbar"]
     path = .config/nvim/bundle/tagbar
     url = https://github.com/majutsushi/tagbar
+    ignore = untracked
 
 [submodule "vim-clojure-static"]
     path = .config/nvim/bundle/vim-clojure-static
     url = git://github.com/guns/vim-clojure-static.git
+    ignore = untracked
 
 [submodule "vim-colors-solarized"]
     path = .config/nvim/bundle/vim-colors-solarized
     url = https://github.com/altercation/vim-colors-solarized.git
+    ignore = untracked
 
 [submodule "vim-dispatch"]
     path = .config/nvim/bundle/vim-dispatch
     url = git://github.com/tpope/vim-dispatch.git
+    ignore = untracked
 
 [submodule "vim-fireplace"]
     path = .config/nvim/bundle/vim-fireplace
     url = git://github.com/tpope/vim-fireplace.git
+    ignore = untracked
 
 [submodule "vim-go"]
     path = .config/nvim/bundle/vim-go
     url = https://github.com/fatih/vim-go.git
+    ignore = untracked
 
 [submodule "vim-grepper"]
     path = .config/nvim/bundle/vim-grepper
     url = https://github.com/mhinz/vim-grepper
+    ignore = untracked
 
 [submodule "vim-markdown-composer"]
     path = .config/nvim/bundle/vim-markdown-composer
     url = https://github.com/euclio/vim-markdown-composer
+    ignore = untracked
 
 [submodule "vim-projectionist"]
     path = .config/nvim/bundle/vim-projectionist
     url = git://github.com/tpope/vim-projectionist.git
+    ignore = untracked
 
 [submodule "vim-salve"]
     path = .config/nvim/bundle/vim-salve
     url = git://github.com/tpope/vim-salve.git
+    ignore = untracked
 
 [submodule "vim-surround"]
     path = .config/nvim/bundle/vim-surround
     url = https://github.com/tpope/vim-surround
+    ignore = untracked
 
 [submodule "vipyut"]
     path = .config/nvim/bundle/vipyut
     url = git@gitlab.spgear.lab.emc.com:campbr9/vipyut.git
+    ignore = untracked
 
 [submodule "vim-tap"]
     path = .config/nvim/bundle/vim-tap
     url = git@gitlab.spgear.lab.emc.com:campbr9/vim-tap.git
+    ignore = untracked
