--- a/.gitmodules
+++ b/.gitmodules
@@ -113,3 +113,8 @@
 	path = .config/nvim/bundle/vim-coffee-script
     url = https://github.com/kchmck/vim-coffee-script
     ignore = untracked
+
+[submodule ".config/nvim/bundle/vim-foldsearch"]
+	path = .config/nvim/bundle/vim-foldsearch
+    url = https://github.com/embear/vim-foldsearch
+    ignore = untracked
