update tmux config to use plugins

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,3 @@
-set -g default-terminal "screen-256color"
 unbind C-b
 set -g prefix C-a
 bind-key a send-prefix
@@ -9,15 +8,10 @@ set -g mouse-resize-pane on
 set -g mouse-select-window on
 set -g mouse-select-pane on
 
-# Enable activity alters
-setw -g monitor-activity on
 
-set -g escape-time 10
 set -g bell-action any
 set -g base-index 1
-setw -g aggressive-resize on
 set -g history-limit 1000000
-bind-key r source-file ~/.tmux.conf
 bind-key | split-window -h
 bind-key - split-window -v
 setw -g c0-change-trigger 10
@@ -30,3 +24,17 @@ bind-key -t vi-copy 'y' copy-selection
 
 # keep window numbers gapless
 set -g renumber-windows
+
+# paste entire history to file
+bind-key P command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S - ; save-buffer %1 ; delete-buffer'
+
+# plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-battery'
+
+set -g status-right 'Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
+
+run '~/.tmux/plugins/tpm/tpm'
