update mcabber settings

--- a/.mcabberrc
+++ b/.mcabberrc
@@ -1,8 +1,9 @@
-set jid = campbr9
+set jid = campbr9@spgear.lab.emc.com
 set username = campbr9
 set disable_random_resource = 1
 set resource = Laptop
-set server = xmpp.spgear.lab.emc.com
+#set server = xmpp.spgear.lab.emc.com
+set server = vplex-xmpp.spgear.lab.emc.com
 set ssl = 1
 set ssl_ignore_checks = 1
 set port = 5223
