--- a/.ssh/config
+++ b/.ssh/config
@@ -2,23 +2,4 @@ Host *
     GSSAPIAuthentication no
     ServerAliveInterval 60
     ForwardAgent yes
-
-
-Host ci-slave-u12-am01
-    HostName ci-slave-u12-am01
-
-Host ci-slave-autobot-u12-ed00
-    HostName ci-slave-autobot-u12-ed00
-
-
-Host dolphin-ci
-    User dolphin
-
-Host dolphin-server
-    User dolphin
-
-Host dolphin-runner-1
-    User dolphin
-
-Host dolphin-runner-2
-    User dolphin
+    Compression yes
