--- a/.gitmodules
+++ b/.gitmodules
@@ -118,3 +118,8 @@
 	path = .config/nvim/bundle/vim-foldsearch
     url = https://github.com/embear/vim-foldsearch
     ignore = untracked
+
+[submodule ".config/nvim/bundle/vim-vue"]
+	path = .config/nvim/bundle/vim-vue
+	url = https://github.com/posva/vim-vue
+    ignore = untracked
