--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,10 +3,7 @@ set -g prefix C-a
 bind-key a send-prefix
 
 # Mouse support
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
-set -g mouse-select-pane on
+set -g mouse on
 
 
 set -g bell-action any
@@ -14,8 +11,8 @@ set -g base-index 1
 set -g history-limit 1000000
 bind-key | split-window -h
 bind-key - split-window -v
-setw -g c0-change-trigger 10
-setw -g c0-change-interval 250
+#setw -g c0-change-trigger 10
+#setw -g c0-change-interval 250
 
 # Vi emulation
 setw -g mode-keys vi
