--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,7 @@ set -g mouse on
 
 set -g bell-action any
 set -g base-index 1
-set -g history-limit 1000000
+set -g history-limit 100000
 bind-key | split-window -h
 bind-key - split-window -v
 #setw -g c0-change-trigger 10
@@ -31,6 +31,8 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @shell_mode 'vi'
+set -g @yank_selection 'primary'
 
 set -g status-right 'Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
 
