--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,8 @@ unbind C-b
 set -g prefix C-a
 bind-key a send-prefix
 
+set-option -g default-terminal "screen-256color"
+
 # Mouse support
 set -g mouse on
 
@@ -16,8 +18,9 @@ bind-key - split-window -v
 
 # Vi emulation
 setw -g mode-keys vi
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+#bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
 
 # keep window numbers gapless
 set -g renumber-windows
