--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,6 +37,6 @@ set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @shell_mode 'vi'
 set -g @yank_selection 'primary'
 
-set -g status-right 'Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
+set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
 
 run '~/.tmux/plugins/tpm/tpm'
