--- a/.gitconfig
+++ b/.gitconfig
@@ -19,9 +19,12 @@
 [core]
 	pager = less -R -x1,5
 	editor = nvim
+	excludesfile = /Users/e87483/.gitignore_global
 [diff]
     compactionHeuristic = true
 [fsck]
     zeroPaddedFilemode = ignore
 [fetch]
 	prune = true
+[interactive]
+	diffFilter = diff-highlight
