add tmux-gruvbox theme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,6 +34,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'egel/tmux-gruvbox'
 set -g @shell_mode 'vi'
 set -g @yank_selection 'primary'
 
