Remove ATB stuff fro coc-settings.json

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -13,10 +13,7 @@
     "java",
     "javax",
     "com",
-    "org",
-    "com.atb",
-    "com.atb.ent.framework",
-    "com.atb.ent"
+    "org"
   ],
   "coc.preferences.formatOnSaveFiletypes": [
     "css",
