try to get home and end keys working in Kitty/tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,6 +16,10 @@ bind-key - split-window -v
 #setw -g c0-change-trigger 10
 #setw -g c0-change-interval 250
 
+# make home/end work in vim
+bind-key -n End send-key C-e
+bind-key -n Home send-key C-a
+
 # Vi emulation
 setw -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
