--- a/.gitconfig
+++ b/.gitconfig
@@ -2,11 +2,14 @@
   name = Ryan Campbell
   email = ryan.campbell@kirasystems.com
 	signingkey = 68AAD397B1C69A9574F84572923BC6AB4EEB29D7
+
 [commit]
   verbose = true
 	gpgsign = true
+
 [color]
   ui = auto
+
 [alias]
   l = log --graph --decorate --all
   graph = log --graph --date-order -C -M --pretty=format:\"<%h> %ad [%an] %Cgreen%d%Creset %s\" --all --date=short
@@ -21,26 +24,38 @@
 
 [log]
   decorate = short
+
 [rebase]
   autosquash = true
+
 [credential]
   helper = cache
+
 [core]
-  pager = /usr/local/share/git-core/contrib/diff-highlight/diff-highlight | less -RXF -x1,5
+  pager = delta
   editor = nvim
+
+[delta]
+    plus-color = "#012800"
+    minus-color = "#340001"
+    syntax-theme = Monokai Extended
+    line-numbers = true
+
+[interactive]
+    diffFilter = delta --color-only
+
 [diff]
   compactionHeuristic = true
+  colorMoved = default
+
 [fsck]
   zeroPaddedFilemode = ignore
+
 [fetch]
   prune = true
-[interactive]
-  diffFilter = $(brew --prefix git)/share/git-core/contrib/diff-highlight/diff-highlight
-[filter "lfs"]
-  clean = git-lfs clean -- %f
-  smudge = git-lfs smudge -- %f
-  process = git-lfs filter-process
-  required = true
 
 [tig]
   vertical-split = true
+
+[url "git@github.com:kirasystems/"]
+	insteadOf = https://github.com/kirasystems/
