--- a/.gitconfig
+++ b/.gitconfig
@@ -59,3 +59,10 @@
 
 [url "git@github.com:kirasystems/"]
 	insteadOf = https://github.com/kirasystems/
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge --skip -- %f
+	process = git-lfs filter-process --skip
+	required = true
+[pull]
+	ff = only
