--- a/.config/regolith/i3/config
+++ b/.config/regolith/i3/config
@@ -468,6 +468,13 @@ bindsym $mod+$i3-wm.binding.bar_toggle bar mode toggle
 floating_maximum_size -1 x -1
 for_window [class="floating_window"] floating enable
 
+
+## Floating windows
+for_window [class="Bitwarden"]                  floating enable
+for_window [class="Bitwarden"]                  resize set 800 600
+for_window [class="Bitwarden"]                  move position center
+
+
 set_from_resource $i3-wm.workspace.auto_back_and_forth i3-wm.workspace.auto_back_and_forth no
 workspace_auto_back_and_forth $i3-wm.workspace.auto_back_and_forth
 
