a bunch of misc changes

--- a/.config/topgrade.toml
+++ b/.config/topgrade.toml
@@ -2,7 +2,7 @@
 assume_yes = true
 
 # Disable specific steps - same options as the command line flag
-disable = ["gcloud", "gnome_shell_extensions"]
+disable = ["gcloud", "gnome_shell_extensions", "node"]
 
 
 # Ignore failures for these steps
