--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,8 +11,8 @@ set -g mouse on
 set -g bell-action any
 set -g base-index 1
 set -g history-limit 100000
-bind-key | split-window -h
-bind-key - split-window -v
+bind-key | split-window -h -c "#{pane_current_path}"
+bind-key - split-window -v -c "#{pane_current_path}"
 #setw -g c0-change-trigger 10
 #setw -g c0-change-interval 250
 
