--- a/.gitconfig
+++ b/.gitconfig
@@ -33,6 +33,7 @@ trustExitCode = true
   af = !git autofixup $(git merge-base -a HEAD @{u})
   nb = new-branch
   frb = !git fetch && git rebase -i @{upstream}
+  rba = !git rebase-upstream --autosquash
 
 [log]
   decorate = short
