--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,6 +32,10 @@ set -g renumber-windows
 # paste entire history to file
 bind-key P command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S - ; save-buffer %1 ; delete-buffer'
 
+# From https://evantravers.com/articles/2021/02/05/curly-underlines-in-kitty-tmux-neovim/
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
